--- a/index.html
+++ b/index.html
@@ -304,9 +304,7 @@
     <script>
         // --- IMPORTANT: REPLACE THIS WITH YOUR DEPLOYED GOOGLE APPS SCRIPT WEB APP URL ---
         // After deploying your Google Apps Script, copy the "Web app URL" and paste it here.
-        const GOOGLE_APPS_SCRIPT_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyxIq0yV8mM9u_O70efHknme_O_Xs9SxHUDDo8AdcXkG06NmZ7RJPMyYql872C2g-th/exec
-
-';
+        const GOOGLE_APPS_SCRIPT_WEB_APP_URL = 'add your script url here '';
 
         // --- Constants ---
         const ADMIN_EMAIL = 'Julian@gmail.com';
